--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -46,7 +46,7 @@
     %footer
       .container
         %span.hello
-          Say hello. <a href="mailto:hello@thisyeari.com">hello@thisyeari.com</a>
+          Say hello. <a href="mailto:hello@thisyeari.com" class="first">hello@thisyeari.com</a>
           <a href="http://twitter.com/thisyeariapp">@thisyeariapp</a>
 
         %span.pull-right
