--- a/app/views/points/_form.html.haml
+++ b/app/views/points/_form.html.haml
@@ -13,3 +13,4 @@
     .col-sm-2
     .col-sm-8
       = f.submit 'Save my progress', class: 'btn btn-primary'
+      = link_to 'Cancel', '/my-goal', class: 'btn btn-default'
