--- a/app/views/goals/_form.html.haml
+++ b/app/views/goals/_form.html.haml
@@ -1,10 +1,13 @@
-= form_for @goal || Goal.new, url: goals_path, :html => { :class => 'form-horizontal large' } do |f|
+- form_error = "<span>Your goal couldn't be saved.</span>Your goal must include ONE number. Please use numbers; don't spell out the words (Use 500 instead of five-hundred)."
+
+= form_for @goal || @goal = Goal.new, url: goals_path, :html => { :class => 'form-horizontal large' } do |f|
   - if @goal.errors.any?
     .alert.alert-danger
       %b Error!
       You must include a numeric quantity in your goal ("I will run 300 miles.")
   .form-group
-    = f.text_field :description, class: 'form-control', autofocus: false, value: @goal.description || 'This year I will '
-  = f.submit "Set my goal", :disable_with => 'Submiting...', class: 'btn btn-large btn-primary'
-  .pull-right
-    %span.quantity
+    = f.text_field :description, class: 'form-control', autofocus: false, value: @goal.description || 'This year I will ',
+        data: { toggle: 'tooltip', trigger: 'manual', original_title: form_error, placement: 'bottom', html: true }
+  = f.submit :disable_with => 'Submiting...', class: 'btn btn-primary visually-disabled', id: 'submit-goal'
+  - unless @goal.new_record?
+    = link_to 'Cancel', '/my-goal', class: 'btn btn-default'
