--- a/app/views/goals/_short_form.html.haml
+++ b/app/views/goals/_short_form.html.haml
@@ -1,7 +1,8 @@
 - form_error = "<span>Your goal couldn't be saved.</span>Your goal must include ONE number. Please use numbers; don't spell out the words (Use 500 instead of five-hundred)."
+
 = form_for @goal || Goal.new, url: goals_path, :html => { :class => 'form-horizontal large' } do |f|
   .form-group
     = f.text_field :description, class: 'form-control', autofocus: false, value: 'This year I will ',
         data: { toggle: 'tooltip', trigger: 'manual', original_title: form_error, placement: 'bottom', html: true }
-  = f.submit "Set my goal", class: 'btn btn-primary visually-disabled', id: 'submit-goal'
-  /= f.submit "Set my goal", disabled: false, :disable_with => 'Submiting...', class: 'btn btn-large btn-primary disabled', id: 'submit-goal'
+  = f.submit class: 'btn btn-primary visually-disabled', id: 'submit-goal'
+
