--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -30,11 +30,11 @@
             %a(href="/") THIS YEAR I
             %div.slogan
               SET ONE QUANTIFIABLE GOAL<br/>
-              AND TRACK YOUR PROGRESS TOWARD IT 
+              AND TRACK YOUR PROGRESS TOWARD IT
           .navbar-right.user-nav
             = render 'misc/login'
 
-      .container
+      .container.main
         .row
           .col-lg-12
             = bootstrap_flash
@@ -51,6 +51,7 @@
 
         %span.pull-right
           = link_to 'About', '/about'
+          = link_to 'Demo', '/demo'
           = link_to 'Privacy Policy', '/privacy-policy'
           &copy; 2014 thisyeari.com 
 
