--- a/app/assets/stylesheets/style.css.scss.less
+++ b/app/assets/stylesheets/style.css.scss.less
@@ -12,10 +12,6 @@ a { color: #00fff5; }
 
 footer {
   min-height: 40px;
-  color: #333;
-  font-family: "Titillium Web";
-  font-size: 18px;
-  text-transform: uppercase;
   .container { padding-top: 10px; }
 
   a {
@@ -44,6 +40,7 @@ footer {
   -webkit-border-radius: 0;
   -ms-border-radius: 0;
   border: 0;
+  text-transform: uppercase;
 }
 
 .btn-primary.visually-disabled {
@@ -91,10 +88,12 @@ a.btn:visited {
 .well,
 .jumbotron {
   background: image-url('content-bg.png') repeat top left;
-  border-radius: 0;
+  border-radius: 0; -moz-border-radius: 0; -webkit-border-radius: 0;
   border: 0;
   margin-top: 20px;
   padding: 24px 40px 36px;
+
+  .page-header { margin-top: 0; }
 }
 
 a.xxl {
@@ -191,41 +190,36 @@ h2.lead {
 
 form.large {
   input[type="text"] {
-    border-radius: 0;
+    border-radius: 0; -moz-border-radius: 0; -webkit-border-radius: 0;
     border: 0;
     padding: 10px;
     font-size: 36px;
     height: auto;
   }
-
-  input[type="submit"].btn {
-    border: 0;
-    border-radius: 0;
-    text-transform: uppercase;
-  }
 }
 
-form.xlarge {
-  input[type="text"],
-  input[type="number"], {
-    border-radius: 0;
-    padding: 10px;
-    font-size: 24px;
-    height: auto;
+form#new_point {
+  input[type="text"] { 
+    font-size: 14px;
+    padding: 6px;
+    border: 1px solid #BDBDBD;
   }
 }
 
 .form-controls {
   text-align: right;
   .btn {
-    border: 0;
-    border-radius: 0;
     font-size: 18px;
   }
 }
 
 .modal-dialog {
   margin-top: 110px;
+}
+
+.modal-content {
+  background-color: #f3f3f3;
+  .col-sm-2 { padding-right: 0; }
 }
 
 .modal-header {
