--- a/app/views/pages/demo.html.haml
+++ b/app/views/pages/demo.html.haml
@@ -1,3 +1,5 @@
+- content_for :title, "THIS YEAR I - DEMO"
+
 %h1.page-header Demo
 
 .row
@@ -8,6 +10,6 @@
 
     %p.mid The green numbers show that she is ahead of schedule. If she doesn't run for the rest of the week, she'll still be 1.22 miles ahead of where she needs to be to reach her goal!
 
-    %p.mid <a href="/users/sign_up">Sign up now</a> and start working toward your goal!
+    %p.mid <a href="/users/sign_in">Sign up now</a> and start working toward your goal!
   .col-md-7
     = image_tag 'demo.jpg', class: 'img-responsive img-bordered'
