--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,17 +10,16 @@
       = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js"
       = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/respond.js/1.3.0/respond.js"
     = stylesheet_link_tag "application", :media => "all"
-    = stylesheet_link_tag "//fonts.googleapis.com/css?family=Coustard:400,900"
-    = stylesheet_link_tag "//fonts.googleapis.com/css?family=Titillium+Web:900,700"
+    = stylesheet_link_tag "//fonts.googleapis.com/css?family=Coustard:900|Titillium+Web:700"
     = stylesheet_link_tag '//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css'
 
-    = favicon_link_tag 'apple-touch-icon-144x144-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '144x144'
-    = favicon_link_tag 'apple-touch-icon-114x114-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '114x114'
-    = favicon_link_tag 'apple-touch-icon-72x72-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '72x72'
-    = favicon_link_tag 'apple-touch-icon-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png'
-    = favicon_link_tag 'favicon.png', :rel => 'shortcut icon'
+    = favicon_link_tag 'apple-touch-icon-144x144-precomposed.png', rel: 'apple-touch-icon-precomposed', type: 'image/png', sizes: '144x144'
+    = favicon_link_tag 'apple-touch-icon-114x114-precomposed.png', rel: 'apple-touch-icon-precomposed', type: 'image/png', sizes: '114x114'
+    = favicon_link_tag 'apple-touch-icon-72x72-precomposed.png',   rel: 'apple-touch-icon-precomposed', type: 'image/png', sizes: '72x72'
+    = favicon_link_tag 'apple-touch-icon-precomposed.png',         rel: 'apple-touch-icon-precomposed', type: 'image/png'
+    = favicon_link_tag 'favicon.png', rel: 'shortcut icon'
     = javascript_include_tag "application"
-    = render 'misc/analytics'
+    = render 'misc/analytics' if Rails.env.production?
 
   %body
     .wrap
@@ -38,7 +37,6 @@
         .row
           .col-lg-12
             = bootstrap_flash
-            /= link_to 'What is this?', '#', class: 'loud pull-right'
             .well
               = yield
             .ps
