better js stuff

--- a/app/assets/stylesheets/style.css.scss.less
+++ b/app/assets/stylesheets/style.css.scss.less
@@ -189,7 +189,8 @@ h2.lead {
 }
 
 form.large {
-  input[type="text"] {
+  input[type="text"],
+  input[type="number"] {
     border-radius: 0; -moz-border-radius: 0; -webkit-border-radius: 0;
     border: 0;
     padding: 10px;
@@ -199,7 +200,8 @@ form.large {
 }
 
 form#new_point {
-  input[type="text"] { 
+  input[type="text"],
+  input[type="number"] { 
     font-size: 14px;
     padding: 6px;
     border: 1px solid #BDBDBD;
