--- a/app/views/points/_form.html.haml
+++ b/app/views/points/_form.html.haml
@@ -3,7 +3,7 @@
     .col-sm-2
       = f.label :quantity, class: 'control-label'
     .col-sm-10
-      = f.text_field :quantity, required: true, class: 'form-control'
+      = f.number_field :quantity, required: true, class: 'form-control'
       %span.help-block How many of what you're doing, that you did (required).
   .form-group
     .col-sm-2
