--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,6 +20,7 @@
     = favicon_link_tag 'favicon.png', rel: 'shortcut icon'
     = javascript_include_tag "application"
     = render 'misc/analytics' if Rails.env.production?
+    = render 'misc/twitter'
 
   %body
     .wrap
