better about page

--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -1,9 +1,13 @@
 - content_for :title, "THIS YEAR I - ABOUT"
 
-%h1.page-header About
+%h1.page-header About This Year I
 
-%p.lead <a href="http://www.thisyeari.com">THISYEARI.COM</a> challenges you to set one quantifiable goal for this year.
+%p.lead <a href="http://www.thisyeari.com">THISYEARI.COM</a> challenges you to set <b>one</b> quantifiable goal for this year.
 
-%p.lead Once you set your goal you'll see a dashboard showing your current status. As you update your progress the dashboard updates stats showing where you are versus where you should be at various dates. Use this data to stay motivated and not fall behind!
+%p.lead What does that mean? It means you choose one goal that is countable- "I'll read 8 books" or "I'll bike to work 25 times". By putting a number on your goal you define what it means to succeed.
 
-%p.lead What are you waiting for? <a href="/users/sign_in">Sign up</a> now and get started on making yourself and the world a better place!
+%p.lead Once you set your goal you'll be able to access your dashboard showing your current status. As you update your progress the dashboard updates stats showing where you are versus where you should be at various dates. Use this data to stay motivated and stay on track!
+
+%p.lead Want to check out the dashboard? <a href="/demo">Our demo</a> shows an average dashboard and explains the various data points.
+
+%p.lead Ready to start working toward your goal? <a href="/users/sign_in">Sign up</a> now and get started on making yourself and the world a better place!
