--- a/app/assets/stylesheets/style.css.scss.less
+++ b/app/assets/stylesheets/style.css.scss.less
@@ -10,6 +10,14 @@ html, body {
 
 a { color: #00fff5; }
 
+p.lead a {
+  font-weight: bold;
+  text-shadow: -2px 1px 1px #333;
+  &:hover {
+    color: white;
+  }
+}
+
 footer {
   min-height: 40px;
   .container { padding-top: 10px; }
